--- a/index.html
+++ b/index.html
@@ -3,32 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Page</title>
+    <title>A/B Test - E-commerce CTA</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>My Store</h1>
-    </header>
-    <main>
-        <section id="product">
-            <h2 id="product-title">Awesome Product</h2>
-            <img id="product-image" src="https://via.placeholder.com/300" alt="Product Image">
-            <p id="product-price">$99.99</p>
-            <div id="product-description"></div>
-                <button id="add-to-cart">Add to Cart</button>
-        </section>
 
-        <div id="cart">
-            <h3>Shoppoing Cart</h3>
-            <ul id="cart-items"></ul>
-            <button id="clear-cart">Clear Cart</button>
-        </div>
-    </main>
+    <div class="container">
+        <h1>Exclusive Product Offer</h1>
+        <p>Get the best deal on our latest product. Limited time only!</p>
+        
+        <!-- Product Image -->
+        <img src="https://via.placeholder.com/300" alt="Product Image" class="product-image">
 
-    <footer>
-        <p>&copy; 2025 My Store</p>
-    </footer>
+        <!-- Call-to-Action Button -->
+        <button id="cta-button">Loading...</button>
+    </div>
 
     <script src="script.js"></script>
 </body>
