Fixing the picture and adding more styles in styles.css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>Get the best deal on our latest product. Limited time only!</p>
         
         <!-- Product Image -->
-        <img src="https://via.placeholder.com/300" alt="Product Image" class="product-image">
+        <img src="https://www.notebookcheck.org/fileadmin/Notebooks/News/_nc3/Apple-Watch-Ultra-2-Trail-Loop-orange-beige-230912.jpg" alt="Product Image" class="product-image">
 
         <!-- Call-to-Action Button -->
         <button id="cta-button">Loading...</button>
